# pokete

./: mannual_test_plug_in.py  pokete.py  pyproject.toml  test_plug_in.py  variables.py  wiki.md
.github/workflows/: main.yml
Test/: test_new_pokete.py  test_plugins.py
mods/: __init__.py  example1.py
pokete_classes/: poke.py  tss.py
pokete_data/: attacks.py  map_data.py  maps.py  mapstations.py  poketes.py
